adicionando novas imagens no arquivo index.html e mudança do title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Refri Dev</title>
+    <title>Drinks Dev</title>
 </head>
 <body>
     <main>
@@ -26,6 +26,25 @@
 <img src="assets/Laranja-refrigerante-foregroundBlur.png" class="fruit">
 <img src="./assets/Laranja-refrigerante.png" class="refri">
         </div>
+
+  <div class="item  hidden "  style="--background:#D55AFF">
+            <div class="title">Açai</div>
+<img src="./assets/Acai-Fruta-removebg.png" class="fruit">
+<img src="./assets/refrigerante-natural-de-guarana-e-acai-removebg-preview (1).png" class="refri">
+        </div>
+
+            <div class="item " style="--background:#912b10 ">
+                <div class="title">Frutas Vermelhas</div>
+<img src="./assets/frutas-vermelhas.2f60br7-removebg-preview.png" class="fruit">
+<img src="./assets/refrigerante-natural-de-frutas-vermelhas-removebg-preview (1).png" class="refri">
+        </div>
+
+        <div class="item " style="--background:#912b40 ">
+            <div class="title">Melancia</div>
+<img src="./assets/png-transparent-melancia-removebg-preview (1).png" class="fruit">
+<img src="./assets/009f9af6580a00c71ae6e9d0c9c2ab9e-removebg-preview.png" class="refri">
+    </div>
+
 
         <div class="arrow">
             <button id="Prev"> < </button>
