mudanças  de imagens no arquivo index.html

--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
 <img src="./assets/Laranja-refrigerante.png" class="refri">
         </div>
 
-  <div class="item  hidden "  style="--background:#D55AFF">
+  <div class="item  hidden "  style="--background:#BB22FD">
             <div class="title">Açai</div>
-<img src="./assets/Acai-Fruta-removebg.png" class="fruit">
+<img src="assets/Acai-Fruta-removebg.png" class="fruit">
 <img src="./assets/refrigerante-natural-de-guarana-e-acai-removebg-preview (1).png" class="refri">
         </div>
 
             <div class="item " style="--background:#912b10 ">
                 <div class="title">Frutas Vermelhas</div>
-<img src="./assets/frutas-vermelhas.2f60br7-removebg-preview.png" class="fruit">
+<img src="assets/berry-mix-isolated-white-surface_372197-983-removebg-preview.png" class="fruit">
 <img src="./assets/refrigerante-natural-de-frutas-vermelhas-removebg-preview (1).png" class="refri">
         </div>
 
-        <div class="item " style="--background:#912b40 ">
-            <div class="title">Melancia</div>
-<img src="./assets/png-transparent-melancia-removebg-preview (1).png" class="fruit">
-<img src="./assets/009f9af6580a00c71ae6e9d0c9c2ab9e-removebg-preview.png" class="refri">
+        <div class="item " style="--background:#47FD22 ">
+            <div class="title">Limão</div>
+<img src="assets/Post_instagram_de_limão_para_frutaria2-removebg-preview.png" class="fruit">
+<img src="assets/Emerald_Green_Simple_limão-removebg-preview.png" class="refri">
     </div>
 
 
